--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html, body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(180deg, #6a5acd, #b5fffc); 
+    background: linear-gradient(180deg, #6a5acd, #b5fffc);
     color: rgb(0, 0, 0);
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
@@ -23,7 +24,7 @@ body {
 }
 
 h1 {
-	color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     font-family: 'Lora', serif;
     font-weight: bolder;
     font-size: 26px;
@@ -32,7 +33,7 @@ h1 {
 }
 
 h2 {
-	color: hwb(0 0% 100%);
+    color: hwb(0 0% 100%);
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
 }
@@ -96,7 +97,65 @@ footer {
     color: aliceblue;
     padding: 3px;
     margin-top: auto;
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
+@media (max-width: 768px) {
+    .profile {
+        margin: 20px;
+    }
 
+    h1 {
+        font-size: 24px;
+    }
+
+    h2 {
+        font-size: 14px;
+    }
+
+    .link-list {
+        padding: 10px;
+    }
+
+    .link-list li a {
+        font-size: 14px;
+    }
+
+    .social img {
+        width: 35px;
+    }
+
+    footer {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    .profile {
+        margin: 10px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 12px;
+    }
+
+    .link-list {
+        padding: 5px;
+    }
+
+    .link-list li a {
+        font-size: 12px;
+    }
+
+    .social img {
+        width: 30px;
+    }
+
+    footer {
+        font-size: 12px;
+    }
+}
